# algos

./: Cargo.toml  README.md  watch.sh
.github/workflows/: bench.yml  rust.yml
benches/: sorts.rs
src/: bench_sorts.rs  binary_tree.rs  lib.rs  substr.rs
