[package]
name = "algos"
version = "0.1.0"
authors = ["Chris Butler <chrisbutler296@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1"
itertools = "0.9"

[dev-dependencies]
criterion = "0.3"

[dependencies.rand]
features = ["small_rng"]
version = "0.7"

[[bench]]
harness = false
name = "sorts"
