[package]
name = "algos"
version = "0.1.0"
authors = ["Chris Butler <chrisbutler296@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1"
itertools = "0.9"

[dev-dependencies]
criterion = "0.3"
pretty_assertions = "0.6"

[dependencies.rand]
features = ["small_rng"]
version = "0.7"

[lib]
name = "algos"
# Disable the bench here so that criterion can run correctly:
# see: https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
bench = false

[[bench]]
name = "sorts"
harness = false

# Some of the algos here depend on nightly features, so they are feature gated.
[features]
default = []
substr = []
